clusters/200/hello-world/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: hello-world
  annotations:
    metallb.io/address-pool: default-pool
spec:
  selector:
    app: hello-world
  ports:
  - port: 80
    targetPort: 80
